--- a/conditions-exercise-1-index.html
+++ b/conditions-exercise-1-index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>conditions-exercise-1</title>
+    <title>Loops-exercise-1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="loop-exercise-1-styles.css">
 </head>
 <body>
-    <script src="conditions-exercise-1-scripts.js"></script> 
+    <div id="thermostat-container">
+            <p id="temp-readout">Current Temp</p>
+            <img id="termostat-jpg" src="thermostat.jpg" alt="https://www.smarthome.com/media/catalog/product/cache/5/image/398x328/9df78eab33525d08d6e5fb8d27136e95/t/h/thermostat_front_.jpg")>
+            <button id="thermostat-button" onclick=thermostatFunction()>Adjust Temp</button>
+    </div>
+<script src="loop-exercise-1-scripts.js"></script>
 </body>
 </html>
