making it so that the converted temp is displayed in html, still haven't actually tested the function itself though..

--- a/conditions-exercise-1-index.html
+++ b/conditions-exercise-1-index.html
@@ -13,6 +13,10 @@
             <img id="termostat-jpg" src="thermostat.jpg" alt="https://www.smarthome.com/media/catalog/product/cache/5/image/398x328/9df78eab33525d08d6e5fb8d27136e95/t/h/thermostat_front_.jpg")>
             <button id="thermostat-button" onclick=thermostatFunction()>Adjust Temp</button>
     </div>
+    <div id="unit-conversion-container">
+        <button id="unit-conversion-button" onclick=temperatureConversion()>Convert your Temperature Here!</button>
+        <p id="converted-temp-readout">Converted Temp Goes Here</p>
+    </div>
 <script src="conditions-exercise-1-scripts.js"></script>
 </body>
 </html>
